feature add and update category
